Created JavaScript file and linked script from HTML file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Test Page</title>
 </head>
 <body>
-    <h1>This is a master page branch</h1>
+    <h1>This content belongs to master branch.</h1>
+    
+    <script src="./js/index.js"></script>
 </body>
 </html>
