--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Test Page</title>
 </head>
 <body>
-    <h1>This content belongs to master branch.</h1>
+    <h1>This content belongs to gh-pages branch.</h1>
     
-    <script src="./js/index.js"></script>
+    <script src="./gh-pages-js/index.js"></script>
 </body>
 </html>
